Change Some things

--- a/Downloads.html
+++ b/Downloads.html
@@ -29,6 +29,8 @@
         <h3>Apps for Android</h3>
         <p>Mini Golf</p>
         <a href="MiniGolf_MIT.aia" target="_blank">Download Version 1</a>
+        <p>I Have a Dream</p>
+        <a href="IHaveaDream.apk" target="_blank">Download Version 1</a>
         
     </body>
     
